<resources>
    <string name="app_name">Incubadora</string>
    <string name="estado_desactivado">Estado: Desactivado</string>
    <string name="activar">Activar</string>
    <string name="direcci_n_ip">Dirección IP</string>
    <string name="nombre_c_digo">Nombre (código)</string>
    <string name="numero">Número</string>
    <string name="datos_de_la_incubadora">Datos de la incubadora</string>
    <string name="sensores">Sensores:</string>
    <string name="camaras">Cámaras:</string>
    <string name="guardar">Guardar</string>
    <string name="datos_del_paciente">Datos del paciente</string>
    <string name="nombre">Nombre</string>
    <string name="primer_apellido">Primer apellido</string>
    <string name="segundo_apellido">Segundo apellido</string>
    <string name="fecha_de_nacimiento_dd_mm_yyyy">Fecha de nacimiento (dd/MM/yyyy)</string>
    <string name="incubadora">Incubadora:</string>
    <string name="desasignar">Desasignar</string>
    <string name="asignar">Asignar</string>
    <string name="tipo_de_sensor">Tipo de sensor</string>
    <string name="lista_de_pacientes">Lista de pacientes</string>
    <string name="incubadoras">Incubadoras</string>
    <string name="a_adir">Añadir</string>
    <string name="datos_del_sensor">Datos del sensor</string>
    <string name="datos_de_la_camara">Datos de la cámara</string>
    <string name="lista_de_incubadoras">Lista de incubadoras</string>
    <string name="puerto">Puerto</string>
    <string name="eliminar">Eliminar</string>
    <string name="alarma">Alarma:</string>
    <string name="alarm">Alarma</string>
    <string name="l_mite_superior">Límite superior</string>
    <string name="l_mite_inferior">Límite inferior</string>
    <string name="tipo_de_c_mara">Tipo de cámara</string>
    <string name="datos_de_los_sensores">Datos de los sensores:</string>
    <string name="dar_de_alta">Dar de alta</string>
    <string name="acceso">Acceso</string>
    <string name="inserte_la_direcci_n_ip_del_servidor">Inserte la dirección ip del servidor</string>
    <string name="inserte_el_puerto_del_servidor">Inserte el puerto del servidor</string>
    <string name="entrar">Entrar</string>
    <string name="asignar_incubadora">Asignar incubadora</string>
    <string name="stream">Stream</string>
</resources>