<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="24dp"
            android:layout_marginTop="29dp"
            android:text="@string/datos_de_la_camara"
            android:textSize="34sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="8sp"
            android:orientation="vertical"
            android:layout_marginStart="8sp">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="0,1">

                <TableRow>

                    <TextView
                        android:layout_column="0"
                        android:text="@string/numero" />

                    <TextView
                        android:layout_column="0"
                        android:text="@string/puerto" />

                </TableRow>

                <TableRow>

                    <EditText
                        android:id="@+id/etCameraNumber"
                        android:layout_column="0"
                        android:height="48dp"
                        tools:ignore="SpeakableTextPresentCheck" />

                    <EditText
                        android:id="@+id/etCameraPort"
                        android:layout_column="0"
                        android:height="48dp"
                        tools:ignore="SpeakableTextPresentCheck" />

                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_column="0"
                        android:text="@string/tipo_de_c_mara" />

                </TableRow>

                <TableRow>

                    <Spinner
                        android:id="@+id/spinnerCameraType"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_column="0"
                        tools:ignore="SpeakableTextPresentCheck" />

                    <LinearLayout
                        android:id="@+id/lytStatus"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tvCameraStatus"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="10sp"
                            android:text="@string/estado_desactivado" />

                        <Button
                            android:id="@+id/btnActivateCamera"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/activar" />

                    </LinearLayout>
                </TableRow>
            </TableLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50sp"
                android:gravity="end"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnSave"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/guardar" />

                <Button
                    android:id="@+id/btnRemove"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/eliminar" />
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>
</ScrollView>
