<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/ScreenTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="24dp"
            android:layout_marginTop="29dp"
            android:text="@string/datos_del_sensor"
            android:textSize="34sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8sp"
            android:layout_marginTop="100sp"
            android:layout_marginEnd="8sp"
            android:orientation="vertical">

            <TableLayout
                android:id="@+id/lytSensorData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="0,1">

                <TableRow android:id="@+id/trSensorDataLabels">

                    <TextView
                        android:id="@+id/tvSensorNumber"
                        android:layout_column="0"
                        android:text="@string/numero" />

                    <TextView
                        android:id="@+id/tvSensorName"
                        android:layout_column="1"
                        android:text="@string/nombre_c_digo" />

                </TableRow>

                <TableRow android:id="@+id/trSensorDataContent">

                    <EditText
                        android:id="@+id/etSensorNumber"
                        android:layout_column="0"
                        android:height="48dp"
                        tools:ignore="SpeakableTextPresentCheck" />

                    <EditText
                        android:id="@+id/etSensorName"
                        android:layout_column="1"
                        android:height="48dp"
                        tools:ignore="SpeakableTextPresentCheck" />

                </TableRow>

                <TableRow android:id="@+id/trSensorDataLabels2">

                    <TextView
                        android:id="@+id/tvSensorType"
                        android:layout_column="0"
                        android:text="@string/tipo_de_sensor" />

                </TableRow>

                <TableRow android:id="@+id/trSensorDataContent2">

                    <Spinner
                        android:id="@+id/spinnerSensorType"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_column="0"
                        tools:ignore="SpeakableTextPresentCheck" />

                </TableRow>

                <TableRow android:id="@+id/trSensorDataContent3">

                    <LinearLayout
                        android:id="@+id/lytStatus"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        tools:ignore="UselessParent">

                        <TextView
                            android:id="@+id/tvSensorStatus"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="10sp"
                            android:text="@string/estado_desactivado" />

                        <Button
                            android:id="@+id/btnActivateSensor"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/activar" />

                    </LinearLayout>
                </TableRow>


            </TableLayout>

            <LinearLayout
                android:id="@+id/lytAlarmTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvAlarm"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/alarma"
                    android:textSize="24sp" />

            </LinearLayout>

            <TableLayout
                android:id="@+id/tableAlarmList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#000000"
                android:stretchColumns="0,1,2,3" />

            <LinearLayout
                android:id="@+id/lytNewAlarm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:gravity="end"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/newAlarm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="@string/a_adir" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50sp"
                android:gravity="end"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnSave"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/guardar" />

                <Button
                    android:id="@+id/btnRemove"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/eliminar" />
            </LinearLayout>
        </LinearLayout>


    </RelativeLayout>
</ScrollView>