<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/ScreenTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="24dp"
            android:layout_marginTop="29dp"
            android:text="@string/datos_del_paciente"
            android:textSize="34sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8sp"
            android:layout_marginTop="100sp"
            android:layout_marginEnd="8sp"
            android:orientation="vertical">

            <TableLayout
                android:id="@+id/lytPersonalData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="0,1">

                <TableRow android:id="@+id/trPersonalDataLabels">

                    <TextView
                        android:id="@+id/tvPatientName"
                        android:layout_column="0"
                        android:text="@string/nombre" />

                    <TextView
                        android:id="@+id/tvPatientSurname1"
                        android:layout_column="1"
                        android:text="@string/primer_apellido" />

                </TableRow>

                <TableRow android:id="@+id/trPersonalDataContent">

                    <EditText
                        android:id="@+id/etPatientName"
                        android:layout_column="0"
                        android:height="48dp" />

                    <EditText
                        android:id="@+id/etPatientSurname1"
                        android:layout_column="1"
                        android:height="48dp" />

                </TableRow>

                <TableRow android:id="@+id/trPersonalDataLabels2">

                    <TextView
                        android:id="@+id/tvPatientSurname2"
                        android:layout_column="0"
                        android:text="@string/segundo_apellido" />

                    <TextView
                        android:id="@+id/tvPatientBirthDate"
                        android:layout_column="1"
                        android:text="@string/fecha_de_nacimiento_dd_mm_yyyy" />

                </TableRow>

                <TableRow android:id="@+id/trPersonalDataContent2">

                    <EditText
                        android:id="@+id/etPatientSurname2"
                        android:layout_width="163dp"
                        android:layout_column="0"
                        android:height="48dp" />

                    <EditText
                        android:id="@+id/etPatientBirthDate"
                        android:layout_column="1"
                        android:height="48dp" />
                </TableRow>

            </TableLayout>

            <LinearLayout
                android:id="@+id/lytIncubator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="visible">

                <TableRow
                    android:layout_width="200dp"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tvIncubator"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2sp"
                        android:text="@string/incubadora"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/tvNumberIncubator"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2sp"
                        android:textSize="24sp" />

                </TableRow>

                <TableRow
                    android:layout_width="100dp"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/btnUnassign"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="1sp"
                        android:text="@string/desasignar"
                        android:textSize="11sp"
                        tools:visibility="invisible" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/btnAssign"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="1sp"
                        android:text="@string/asignar"
                        android:textSize="11sp" />
                </TableRow>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lytcameraTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvCamera"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2sp"
                    android:layout_weight="1"
                    android:text="@string/camaras"
                    android:textSize="24sp" />

            </LinearLayout>

            <TableLayout
                android:id="@+id/tableCameraList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#000000"
                android:stretchColumns="0,1,2" />

            <LinearLayout
                android:id="@+id/lytSensorReceivedData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvSensor"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2sp"
                        android:layout_weight="1"
                        android:text="@string/datos_de_los_sensores"
                        android:textSize="24sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lytSensorData"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:orientation="vertical"
                    android:layout_marginTop="5dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50sp"
                android:gravity="end"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnSave"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/guardar" />

                <Button
                    android:id="@+id/btnRemove"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/dar_de_alta" />
            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>
</ScrollView>