<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/ScreenTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="24dp"
            android:layout_marginTop="29dp"
            android:text="@string/datos_de_la_incubadora"
            android:textSize="34sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/lytComponentTables"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8sp"
            android:layout_marginTop="100sp"
            android:layout_marginEnd="8sp"
            android:orientation="vertical">

            <TableLayout
                android:id="@+id/tblyIncubatorsList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="0,1">

                <TableRow android:id="@+id/trIncubatorDataLabels">

                    <TextView
                        android:id="@+id/tvNumber"
                        android:layout_column="0"
                        android:text="@string/numero" />

                    <TextView
                        android:id="@+id/tvName"
                        android:layout_column="1"
                        android:text="@string/nombre_c_digo" />

                </TableRow>

                <TableRow android:id="@+id/trIncubatorDataContent">

                    <EditText
                        android:id="@+id/etIncubatorNumber"
                        android:layout_column="0"
                        android:height="48dp" />

                    <EditText
                        android:id="@+id/etIncubatorName"
                        android:layout_column="1"
                        android:height="48dp" />

                </TableRow>

                <TableRow android:id="@+id/trIncubatorDataLabels2">

                    <TextView
                        android:id="@+id/tvIPAddress"
                        android:layout_column="0"
                        android:text="@string/direcci_n_ip" />

                </TableRow>

                <TableRow
                    android:id="@+id/trIncubatorDataContent2"
                    android:layout_width="wrap_content">

                    <EditText
                        android:id="@+id/etIncubatorIPAddress"
                        android:layout_width="wrap_content"
                        android:layout_column="0"
                        android:height="48dp"
                        android:textSize="14sp"
                        tools:ignore="SpeakableTextPresentCheck" />

                    <LinearLayout
                        android:id="@+id/lytStatus"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tvIncubatorStatus"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="10sp"
                            android:text="@string/estado_desactivado" />

                        <Button
                            android:id="@+id/btnActivateIncubator"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/activar" />

                    </LinearLayout>

                </TableRow>

            </TableLayout>

            <LinearLayout
                android:id="@+id/lytSensorTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvSensor"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="2sp"
                    android:layout_weight="1"
                    android:text="@string/sensores"
                    android:textSize="24sp" />

            </LinearLayout>

            <TableLayout
                android:id="@+id/tableSensorList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#000000"
                android:stretchColumns="0,1,2,3" />

            <LinearLayout
                android:id="@+id/lytNewSensor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/newSensor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="@string/a_adir" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lytCameraTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvCamera"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/camaras"
                    android:textSize="24sp" />

            </LinearLayout>

            <TableLayout
                android:id="@+id/tableCameraList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#000000"
                android:stretchColumns="0,1,2,3" />

            <LinearLayout
                android:id="@+id/lytNewCamera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:gravity="end"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/newCamera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="@string/a_adir" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50sp"
                android:gravity="end"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnSave"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/guardar" />

                <Button
                    android:id="@+id/btnRemove"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/eliminar" />
            </LinearLayout>

        </LinearLayout>


    </RelativeLayout>

</ScrollView>